syntax = "proto3";

package com.sbss.bithon.agent.rpc.brpc.event;

option java_multiple_files = true;

message EventMessage {
    int64 timestamp = 1;
    string eventType = 2;
    map<string,string> arguments = 3;
}
