syntax = "proto3";

package org.bithon.agent.rpc.brpc.event;

option java_multiple_files = true;

message BrpcEventMessage {
    int64 timestamp = 1;
    string eventType = 2;
    map<string,string> arguments = 3;
}

message BrpcEventMessage2 {
    int64 timestamp = 1;
    string eventType = 2;
    string jsonArguments = 3;
}
